// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Tab renders correctly when active 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Snapshot tests Tab renders correctly when disabled 1`] = `
<li
  aria-disabled={true}
  aria-selected={false}
  className="tab--wrapper disabled"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Snapshot tests Tab renders correctly when focus 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper focus-visible"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Snapshot tests Tab renders correctly when focus and active 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active focus-visible"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Snapshot tests Tab renders correctly with className 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper test"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Snapshot tests Tab renders correctly with empty props 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Snapshot tests Tab renders correctly with icon on left 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Snapshot tests Tab renders correctly with icon on right 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Snapshot tests Tab renders correctly with id 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id="test"
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Snapshot tests Tab renders correctly with value 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Snapshot tests TabList renders correctly with activeTabId 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabList renders correctly with children 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabList renders correctly with className 1`] = `
<div
  className="tabs--wrapper test Compact"
  id=""
>
  <ul
    className="tabs-list"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabList renders correctly with id 1`] = `
<div
  className="tabs--wrapper Compact"
  id="test"
>
  <ul
    className="tabs-list"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabList renders correctly with size 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list lg"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabList renders correctly with tabType 1`] = `
<div
  className="tabs--wrapper stretched"
  id=""
>
  <ul
    className="tabs-list"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`Snapshot tests TabPanels renders correctly with animation from left to right 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tab-panel--wrapper tab-panel active animation-direction-ltr"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`Snapshot tests TabPanels renders correctly with animation from right to left 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tab-panel--wrapper tab-panel active animation-direction-rtl"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`Snapshot tests TabPanels renders correctly with empty props 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tab-panel--wrapper tab-panel active animation-direction-rtl"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`Snapshot tests TabPanels renders correctly with the given active tab panel 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tab-panel--wrapper tab-panel active animation-direction-rtl"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tab-panel--wrapper tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;
